# dapps-template-gear-academy

./: .gitattributes  .gitignore  .gitpod.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: contracts.yml  frontend.yml  jekyll-gh-pages.yml  pr.yml
01-tamagochi/: .binpath  Cargo.toml  build.rs
01-tamagochi/io/: Cargo.toml
01-tamagochi/io/src/: lib.rs
01-tamagochi/src/: lib.rs
01-tamagochi/tests/: smoke.rs
01-tamagotchi/: Cargo.toml  build.rs
01-tamagotchi/io/: Cargo.toml
01-tamagotchi/io/src/: lib.rs
01-tamagotchi/src/: lib.rs
01-tamagotchi/tests/: smoke.rs
02-tamagotchi-interaction/: Cargo.toml  build.rs
02-tamagotchi-interaction/io/: Cargo.toml
02-tamagotchi-interaction/io/src/: lib.rs
02-tamagotchi-interaction/src/: lib.rs
02-tamagotchi-interaction/tests/: interaction.rs
03-tamagotchi-nft/: Cargo.toml  build.rs
03-tamagotchi-nft/io/: Cargo.toml
03-tamagotchi-nft/io/src/: lib.rs
04-tamagotchi-shop/: Cargo.toml  build.rs
04-tamagotchi-shop/io/: Cargo.toml
04-tamagotchi-shop/io/src/: lib.rs
04-tamagotchi-shop/src/: lib.rs
04-tamagotchi-shop/upload/: Cargo.toml
04-tamagotchi-shop/upload/src/: main.rs
05-tamagotchi-auto/: Cargo.toml  build.rs
05-tamagotchi-auto/io/: Cargo.toml
06-tamagotchi-army/: Cargo.toml  build.rs
06-tamagotchi-army/io/: Cargo.toml
06-tamagotchi-army/io/src/: lib.rs
contracts/: Cargo.toml  rust-toolchain.toml
contracts/.cargo/: config.toml
contracts/01-tamagotchi/: Cargo.toml
contracts/01-tamagotchi/io/: Cargo.toml
contracts/01-tamagotchi/io/src/: lib.rs
contracts/01-tamagotchi/src/: lib.rs
contracts/01-tamagotchi/tests/: smoke.rs
contracts/02-tamagotchi-interaction/: Cargo.toml  build.rs
contracts/02-tamagotchi-interaction/io/: Cargo.toml
contracts/02-tamagotchi-interaction/io/src/: lib.rs
contracts/02-tamagotchi-interaction/src/: lib.rs
contracts/02-tamagotchi-interaction/tests/: interaction.rs
contracts/03-tamagotchi-nft/: Cargo.toml  build.rs
contracts/03-tamagotchi-nft/io/: Cargo.toml
contracts/03-tamagotchi-nft/io/src/: lib.rs
contracts/03-tamagotchi-nft/src/: lib.rs
contracts/03-tamagotchi-nft/tests/: owning.rs
contracts/04-tamagotchi-shop/: Cargo.toml  build.rs
contracts/04-tamagotchi-shop/io/: Cargo.toml
contracts/04-tamagotchi-shop/io/src/: lib.rs
contracts/04-tamagotchi-shop/src/: lib.rs
contracts/04-tamagotchi-shop/store/: Cargo.toml  build.rs
contracts/04-tamagotchi-shop/store/io/: Cargo.toml
contracts/04-tamagotchi-shop/store/io/src/: lib.rs
contracts/04-tamagotchi-shop/store/src/: lib.rs
contracts/04-tamagotchi-shop/tests/: owning.rs
contracts/04-tamagotchi-shop/upload/: Cargo.toml
contracts/04-tamagotchi-shop/upload/src/: main.rs
contracts/05-tamagotchi-auto/: Cargo.toml  build.rs
contracts/05-tamagotchi-auto/io/: Cargo.toml
contracts/05-tamagotchi-auto/io/src/: lib.rs
contracts/05-tamagotchi-auto/src/: lib.rs
contracts/06-tamagotchi-army/: Cargo.toml  build.rs
contracts/06-tamagotchi-army/io/: Cargo.toml
contracts/06-tamagotchi-army/io/src/: lib.rs
frontend/: .env  package-lock.json  package.json
frontend/src/: app.tsx
frontend/src/app/: atoms.ts
frontend/src/app/context/: ctx-ft-balance.tsx
frontend/src/app/hooks/: use-account-available-balance.ts  use-battle.ts  use-check-balance.ts  use-ft-balance.ts  use-handle-calculate-gas.ts  use-lesson-5.ts  use-metadata.ts  use-read-wasm-state.ts  use-tamagotchi.ts
frontend/src/app/types/: ft-wallet.ts
frontend/src/app/utils/: get-lesson-assets.ts  index.ts
frontend/src/assets/meta/: ft_logic.meta.txt  meta-store.txt  meta1.txt  meta2.txt  meta3.txt  meta4.txt  meta5.txt  state2.meta.wasm
frontend/src/components/cards/store-item-card/: store-item-card.tsx
frontend/src/components/common/accounts-list/: accounts-list.tsx
frontend/src/components/common/gas-wallet/: gas-wallet.tsx
frontend/src/components/common/get-gas-balance/: get-gas-balance.tsx
frontend/src/components/forms/approve-account-form/: approve-account-form.tsx
frontend/src/components/forms/start-battle-form/: start-battle-form.tsx
frontend/src/components/forms/transfer-account-form/: transfer-account-form.tsx
frontend/src/components/layout/header/account/: account.tsx
frontend/src/components/popups/revoke-approval-popup/: revoke-approval-popup.tsx
frontend/src/components/popups/select-account-popup/: select-account-popup.tsx
frontend/src/components/tamagotchi/tamagotchi-info-card/: tamagotchi-info-card.tsx
frontend/src/pages/: battle.tsx
hello-world/: Cargo.toml
hello-world/src/: lib.rs
store/: Cargo.toml
store/io/: Cargo.toml
store/io/src/: lib.rs
store/src/: lib.rs
upload/: Makefile  transactions.yml
upload/programs/: ft_logic.opt.wasm  ft_main.opt.wasm  ft_meta.txt  ft_storage.opt.wasm  sharded_fungible_token.opt.wasm  sharded_fungible_token_logic.opt.wasm  sharded_fungible_token_storage.opt.wasm  store.opt.wasm  store_meta.txt
