[package]
name = "tamagochi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["debug"] }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
io = { path = "io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["wasm-opt"] }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }
io = { path = "io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }