[workspace.package]
homepage = "https://academy.gear.foundation"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "0.3.3"
license = "MIT"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "01-tamagotchi",
    "02-tamagotchi-interaction",
    "03-tamagotchi-nft",
    "04-tamagotchi-shop",
    "04-tamagotchi-shop/store",
    "04-tamagotchi-shop/upload",
    "05-tamagotchi-auto",
    "06-tamagotchi-army",
]

[workspace.dependencies]
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gear-core = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gsdk = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }

tamagotchi-io.path = "01-tamagotchi/io"
tamagotchi-interaction-io.path = "02-tamagotchi-interaction/io"
tamagotchi-nft-io.path = "03-tamagotchi-nft/io"
tamagotchi-shop-io.path = "04-tamagotchi-shop/io"
store-io.path = "04-tamagotchi-shop/store/io"
tamagotchi-auto-io.path = "05-tamagotchi-auto/io"
tamagotchi-army-io.path = "06-tamagotchi-army/io"

tokio = "1"

# External binaries

sharded-fungible-token = { git = "https://github.com/gear-foundation/dapps", tag = "v1.0.2" }
sharded-fungible-token-logic = { git = "https://github.com/gear-foundation/dapps", tag = "v1.0.2" }
sharded-fungible-token-storage = { git = "https://github.com/gear-foundation/dapps", tag = "v1.0.2" }
sharded-fungible-token-io = { git = "https://github.com/gear-foundation/dapps", tag = "v1.0.2" }

