[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
store-io.workspace = true
ft-main-io.workspace = true
scale-info.workspace = true

[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
store-io.workspace = true
