[package]
name = "upload"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
parity-scale-codec.workspace = true
gclient.workspace = true
gear-core.workspace = true
gsdk.workspace = true
ft-logic.workspace = true
ft-main.workspace = true
ft-main-io.workspace = true
ft-storage.workspace = true
store.workspace = true
tokio.workspace = true
