[package]
name = "upload"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
parity-scale-codec.workspace = true
gclient.workspace = true
gear-core.workspace = true
gsdk.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token.workspace = true
sharded-fungible-token-io.workspace = true
sharded-fungible-token-storage.workspace = true
store.workspace = true
tokio.workspace = true
