[package]
name = "tamagotchi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { version = "0.4.33", default-features = false, features = ["alloc"] }
gstd.workspace = true
tamagotchi-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-io.workspace = true

[dev-dependencies]
gtest.workspace = true
