[package]
name = "tamagotchi-interaction"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
tamagotchi-interaction-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-interaction-io.workspace = true

[dev-dependencies]
gtest.workspace = true
