[package]
name = "tamagotchi-shop"
version.workspace = true
edition.workspace = true
publish.workspace = true

# TODO: 1️⃣ Add the `sharded-fungible-token-io` and `store-io` crates as dependencies
[dependencies]
gstd.workspace = true
tamagotchi-shop-io.workspace = true
sharded-fungible-token-io.workspace = true
store-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-shop-io.workspace = true
