[package]
name = "upload"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gclient.workspace = true
gear-core.workspace = true
gsdk.workspace = true
sharded-fungible-token-io.workspace = true
tokio.workspace = true

# External binaries

sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true
